fixes z-index of buttons - sidebar was moved up in stack

--- a/source/styles.css
+++ b/source/styles.css
@@ -5,7 +5,7 @@
   position: absolute;
   bottom: 5px;
   right: 5px;
-  z-index: 1;
+  z-index: 10000;
   border-radius: 5px;
   cursor: pointer;
 }
